--- a/html/atributos/atributos.html
+++ b/html/atributos/atributos.html
@@ -59,13 +59,13 @@
             <div class="row ">
                <div class="col-3 p-3 "  > <!--style="overflow-y: auto; max-height: 900px"-->
                 <div id="list-example" class="list-group ps-2"  >
-                  <a class="list-group-item list-group-item-action " href="/html/html.html" id="list-item-5"> <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
+                  <a class="list-group-item list-group-item-action " href="/html/html.html" > <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
                   <a class="list-group-item list-group-item-action" href="/html/etiquetas/etiquetas.html" id="list-item-2">Etiquetas</a>
-                  <a class="list-group-item list-group-item-action" href="/html/elementos-vacios-y-llenos/elementos.html">Elementos vacíos y llenos </a>
+                  <a class="list-group-item list-group-item-action" href="/html/elementos-vacios-y-llenos/elementos.html">Elementos llenos y vacíos </a>
                   <a class="list-group-item list-group-item-action" href="/html/estructura/estructura-basica.html">Estructura básica </a>
                   <a class="list-group-item list-group-item-action" href="/html/atributos/atributos.html " id="list-item-5">Atributos</a>
                   <a class="list-group-item list-group-item-action" href="/html/tablas/tablas.html">Tablas</a>
-                  <a class="list-group-item list-group-item-action" href="/html/formularios/formularios.html">Formularios                <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
+                  <a class="list-group-item list-group-item-action" href="/html/formularios/formularios.html">Formularios</a>
                  
 
                 </div>
