--- a/html/tablas/tablas.html
+++ b/html/tablas/tablas.html
@@ -59,7 +59,7 @@
             <div class="row ">
                <div class="col-3 p-3 "  > <!--style="overflow-y: auto; max-height: 900px"-->
                 <div id="list-example" class="list-group ps-2"  >
-                  <a class="list-group-item list-group-item-action " href="/html/html.html" id="list-item-5"> <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
+                  <a class="list-group-item list-group-item-action " href="/html/html.html"> <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
                   <a class="list-group-item list-group-item-action" href="/html/etiquetas/etiquetas.html" id="list-item-2">Etiquetas</a>
                   <a class="list-group-item list-group-item-action" href="/html/elementos-vacios-y-llenos/elementos.html">Elementos llenos y vacíos</a>
                   <a class="list-group-item list-group-item-action" href="/html/estructura/estructura-basica.html">Estructura básica</a>
@@ -74,7 +74,7 @@
                 <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
                 
                   <div class="title-content pt-0 m-3 mb-3">
-                    <h1 id="list-item-1" class="title main-title text-center fs-1"><span  class="after-element">Tablas:</span> funcionamiento</h1>
+                    <h1 id="list-item-5" class="title main-title text-center fs-1"><span  class="after-element">Tablas:</span> funcionamiento</h1>
                     <p class="description text-center  mt-4 p-3 fs-5">Las tablas en <span  class="after-element" > <b> HTML </b></span> son elementos utilizados para organizar y presentar datos en formato tabular, similar a una hoja de cálculo. Se componen de filas y columnas, y permiten mostrar información de manera estructurada y ordenada. Las tablas en <span  class="after-element" > <b> HTML </b></span> se crean utilizando elementos específicos. </p>
                     <div class="container m-4 d-flex justify-content-center align-items-center">
                       <div class="row gx-5">
