--- a/html/estructura/estructura-basica.html
+++ b/html/estructura/estructura-basica.html
@@ -60,10 +60,10 @@
                <div class="col-3 p-3 "  > <!--style="overflow-y: auto; max-height: 900px"-->
                 <div id="list-example" class="list-group ps-2"  >
                   <a class="list-group-item list-group-item-action " href="/html/html.html" id="list-item-1"> <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
-                  <a class="list-group-item list-group-item-action" href="/html/etiquetas/etiquetas.html" id="list-item-2">Navegador</a>
+                  <a class="list-group-item list-group-item-action" href="/html/etiquetas/etiquetas.html" id="list-item-2">Etiquetas</a>
                   <a class="list-group-item list-group-item-action" href="/html/elementos-vacios-y-llenos/elementos.html">Elementos Llenos y Vacíos</a>
                   <a class="list-group-item list-group-item-action" href="/html/estructura/estructura-basica.html" id="list-item-4">Estructura básica</a>
-                  <a class="list-group-item list-group-item-action" href="/html/atributos/atributos.html ">Item 4</a>
+                  <a class="list-group-item list-group-item-action" href="/html/atributos/atributos.html ">Atributos</a>
                   <a class="list-group-item list-group-item-action" href="/html/tablas/tablas.html">Tablas</a>
                   <a class="list-group-item list-group-item-action" href="/html/formularios/formularios.html">Formularios</a>
                   
