--- a/html/html.html
+++ b/html/html.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="html.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <title>Document</title>
+    <title>HTML</title>
 </head>
 <body>
     <header>
@@ -50,7 +50,7 @@
         <img src="" alt="">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb ">
           <ol class="breadcrumb m-3 p-2">
-            <li class="breadcrumb-item"><a href="/index.html"><i class="bi bi-house p-2"></i>Inicio</a></li>
+            <li class="breadcrumb-item"><a href="/index.html" class="link-offset-2 link-underline link-underline-opacity-0"><i class="bi bi-house p-2 "></i>Inicio</a></li>
             <li class="breadcrumb-item active" aria-current="page">HTML</li>
           </ol>
         </nav>
